--- a/pt-BR.lproj/Localizable.strings
+++ b/pt-BR.lproj/Localizable.strings
@@ -33,4 +33,14 @@
 "mediumDescription"= "Algumas letras não tão comuns, como o Q";
 "hardDescription"= "Todas as letras do alfabeto";
 
+// MARK: - Game
+"currentPlayer" = "Sua vez";
+
+// MARK: - Pause
+"continueButton" = "Continuar jogando";
+"endButton" = "Finalizar jogo";
+
+// MARK: - Lose
+"loseTitle" = "Você perdeu";
+"continueButtonLose" = "Continuar jogando";
 
