--- a/pt-BR.lproj/Localizable.strings
+++ b/pt-BR.lproj/Localizable.strings
@@ -49,3 +49,14 @@
 "multiplayerField" = "Digite o seu nome";
 "createSessionButton" = "Criar jogo";
 "joinSessionButton" = "Entrar em um jogo";
+
+// MARK: - Create room
+"createRoomTitle" = "Jogar";
+"createRoomSubtitle" = "Compartilhe este código com seus amigos";
+"participantsAlreadyIn" = "Participantes que já entraram";
+"createRoomStartButton" = "Começar";
+
+// MARK: - Join room
+"joinRoomTitle" = "Entrar em um jogo";
+"joinRoomField" = "Digite o código da sala";
+"joinRoomButton" = "Entrar";
