setting view with viewModel and homeViewModel
still need to do the toogles logic in the settings

--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -14,6 +14,7 @@
 "howToPlayButton" = "How to play";
 "storeButton" = "Store";
 "aboutUsButton" = "About us";
+"settingsTitle" = "Settings";
 
 // MARK: - How To Play
 "howToPlayTitle" = "Here's how to play:";
