--- a/pt-BR.lproj/Localizable.strings
+++ b/pt-BR.lproj/Localizable.strings
@@ -14,6 +14,7 @@
 "howToPlayButton" = "Como jogar?";
 "storeButton" = "Loja";
 "aboutUsButton" = "Sobre nós";
+"settingsTitle" = "Configurações";
 
 // MARK: - How To Play
 "howToPlayTitle" = "Veja como jogar:";
