--- a/pt-BR.lproj/Localizable.strings
+++ b/pt-BR.lproj/Localizable.strings
@@ -56,6 +56,7 @@
 "createRoomSubtitle" = "Compartilhe este código com seus amigos";
 "participantsAlreadyIn" = "Participantes que já entraram";
 "createRoomStartButton" = "Começar";
+"finishRoomStartButton" = "Finalizar";
 
 // MARK: - Join room
 "joinRoomTitle" = "Entrar em um jogo";
